# xor-from-scratch

./: .gitignore  README.md  main.py  network.py
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  REAME.md  vcpkg.json
cpp/include/functions/activation/: tanh_function.h
cpp/include/functions/loss/: mse_loss_function.h
cpp/include/layers/: activation_layer.h  fc_layer.h
cpp/include/network/: network.h
cpp/src/: main.cpp
cpp/src/functions/activation/: activation.cpp  activation.h  activation_function.h  tanh_function.cpp  tanh_function.h
cpp/src/functions/loss/: loss.cpp  loss.h  loss_function.h  mse_loss_function.cpp  mse_loss_function.h
cpp/src/layer/: activation_layer.cpp  activation_layer.h  fc_layer.cpp  fc_layer.h  layer.h
cpp/src/layers/: activation_layer.cpp  fc_layer.cpp
cpp/src/network/: network.cpp  network.h
functions/activation/: _base.py  tanh_activation.py
layers/: __init__.py
python/: README.md  main.py
python/functions/activation/: __init__.py
python/functions/loss/: __init__.py  _base.py  mse_loss.py
python/layers/: _base.py  activation_layer.py  fc_layer.py
python/network/: network.py
